# engineers/03-implementations/backend/src/main/java/com/arcade/stadium/adapter/in/web/rest/PlayerRestController.java
@@ -34,7 +34,7 @@ public class PlayerRestController {
         return Mono.deferContextual(ctx -> {
             UserAuthentication auth = ctx.get(UserAuthentication.class);
             return playerCommandService.whoami(auth.email())
-                    .map(ResponseEntity::ok);
+                    .map(resp -> ResponseEntity.ok(resp.withAdmin(auth.isAdmin())));
         });
     }
 
